--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "mpaint-ssr",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "vue-nginx-app",
+  "version": "1.0.0",
+  "description": "Simple Vue.js app with nginx",
+  "main": "index.js",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "vue": "^3.5.22"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@types/node": "^24.6.0",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/tsconfig": "^0.8.1",
-    "typescript": "~5.9.3",
-    "vite": "^7.1.7",
-    "vue-tsc": "^3.1.0"
+    "@vitejs/plugin-vue": "^4.2.3",
+    "typescript": "^5.0.2",
+    "vue-tsc": "^1.8.22",
+    "vite": "^4.4.5"
   }
 }
