--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,19 @@ services:
     networks:
       - vue-network
 
+  api:
+    image: python:3.11-slim
+    container_name: api
+    working_dir: /app
+    volumes:
+      - ./backend:/app
+    command: sh -c "pip install --no-cache-dir -r requirements.txt && uvicorn main:app --host 0.0.0.0 --port 8000"
+    expose:
+      - "8000"
+    restart: unless-stopped
+    networks:
+      - vue-network
+
 networks:
   vue-network:
     driver: bridge
