--- a/nginx.conf
+++ b/nginx.conf
@@ -17,6 +17,16 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
+    # Прокси API на FastAPI сервис
+    location /api/ {
+        proxy_pass http://api:8000/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # Обработка SPA (Single Page Application)
     location / {
         try_files $uri $uri/ /index.html;
