--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -18,14 +18,14 @@ server {
     }
 
     # Прокси API на FastAPI сервис
-    location /api/ {
-        proxy_pass http://api:8000/;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    # location /api/ {
+    #     proxy_pass http://api:8000/;
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    # }
 
     # Обработка SPA (Single Page Application)
     location / {
