Refactor docker-compose.yml to rename services and restore API configuration; update nginx.conf to proxy to new service name; modify App.vue version display from 3 to 4

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  vue-app:
+  s_front:
     build:
       context: ./frontend
       dockerfile: Dockerfile
@@ -12,18 +12,18 @@ services:
     networks:
       - vue-network
 
-  # api:
-  #   image: python:3.11-slim
-  #   container_name: c_back
-  #   working_dir: /app
-  #   volumes:
-  #     - ./backend:/app
-  #   command: sh -c "pip install --no-cache-dir -r requirements.txt && uvicorn main:app --host 0.0.0.0 --port 8000"
-  #   expose:
-  #     - "8000"
-  #   restart: unless-stopped
-  #   networks:
-  #     - vue-network
+  s_back:
+    image: python:3.11-slim
+    container_name: c_back
+    working_dir: /app
+    volumes:
+      - ./backend:/app
+    command: sh -c "pip install --no-cache-dir -r requirements.txt && uvicorn main:app --host 0.0.0.0 --port 8000"
+    ports:
+      - "8000:8000"
+    restart: unless-stopped
+    networks:
+      - vue-network
 
 networks:
   vue-network:
