--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,13 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "typescript": "^5.0.2",
-    "vue-tsc": "^1.8.22",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vue-tsc": "^1.8.22"
   }
 }
-
