--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "element-plus": "^2.11.7",
     "vue": "^3.3.4",
     "vue-router": "^4.6.3"
   },
