--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,4 +3,6 @@ uvicorn[standard]==0.32.0
 sqlalchemy==2.0.36
 psycopg2-binary==2.9.10
 alembic==1.14.0
+passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
 
