--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "element-plus": "^2.11.7",
+    "pinia": "^3.0.4",
     "vue": "^3.3.4",
     "vue-router": "^4.6.3"
   },
